--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,5 +3,5 @@ spring:
     name: demo
 
   datasource:
-    url: jdbc:h2:file:C:/Users/aa990/github/loc-database/demo-spring-boot-h2
+    url: jdbc:h2:file:C:/Users/aa990/github/loc-database/demo-spring-boot-h2;AUTO_SERVER=TRUE
     driver-class-name: org.h2.Driver
